<resources>
    <string name="title_app_name">Photo Editor</string>
    <string name="title_request_permission">Request Permission</string>
    <string name="title_make_video">Making a Video</string>
    <string name="title_done">Done</string>
    <string name="title_effect">Effect</string>
    <string name="title_color_red">Red</string>
    <string name="title_color_green">Green</string>
    <string name="title_color_blue">Blue</string>
    <string name="title_video_result">Video Result</string>
    <string name="title_video_path">Path : </string>
    <string name="title_image_result">Image Result</string>
    <string name="title_image_path">Image Path : </string>
    <string name="title_permission_storage">Need Storage Permission</string>
    <string name="title_permission_camera">Need Camera Permission</string>
    <string name="msg_permission_storage">This app needs access storage permission.</string>
    <string name="msg_permission_camera">This app needs phone permission.</string>
    <string name="msg_request_permission">Do you want to open permission?</string>
    <string name="msg_discard_changes">Discard Changes?</string>
    <string name="msg_creating">Creating&#8230;</string>
    <string name="msg_saving">Saving&#8230;</string>
    <string name="msg_success">Success!</string>
    <string name="msg_success_save_image_file">You have saved image files</string>
    <string name="msg_error_combining">Error Combining</string>
    <string name="msg_error_save_image_file">Can\'t save image file.</string>
    <string name="action_edit">Edit</string>
    <string name="action_merge">Merge</string>
    <string name="action_combine">Combine</string>
    <string name="action_video">Video</string>
    <string name="action_discard">Discard</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_merge_grid">Grid</string>
    <string name="action_merge_frame">Frame</string>
    <string name="action_save">Save</string>
    <string name="action_share">Share</string>
    <string name="action_grant">Grant</string>
</resources>
