<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/title_image_result"
        android:textSize="@dimen/sp_30"/>

    <ImageView
        android:id="@+id/image_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_15"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"/>

    <Button
        android:id="@+id/button_save_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_60"
        android:text="@string/action_save"/>

    <Button
        android:id="@+id/button_share_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/action_share"/>

</LinearLayout>