<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black_white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_app_name"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_30"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_80"
        app:cardCornerRadius="@dimen/dp_5">

        <LinearLayout
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_5"
                android:src="@drawable/ic_edit"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_15"
                android:text="@string/action_edit"
                android:textSize="@dimen/sp_25"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_merge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        app:cardCornerRadius="@dimen/dp_5">

        <LinearLayout
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_5"
                android:src="@drawable/ic_merge"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_15"
                android:text="@string/action_merge"
                android:textSize="@dimen/sp_25"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_5"
                android:src="@drawable/ic_video"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_15"
                android:text="@string/action_video"
                android:textSize="@dimen/sp_25"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
